Added pictures of cards, refactored code, added comments and made button fucnctionality